assets/css/extended/custom.css
@import url('https://fonts.googleapis.com/css2?family=Monserat:wght@100;300;400;500;600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap');

main.main {
    position: relative;
    min-height: calc(100vh - var(--header-height) - var(--footer-height));
    max-width: calc(var(--main-width) + var(--gap) * 15);
    margin: auto;
    padding: var(--gap);
    padding-bottom: 0px;
    font-family: 'Monserat', sans-serif;
    font-weight: 400;
    font-size: 1.20em;
    letter-spacing: 0.008em;
    word-spacing: 0.1em;
    line-height: 1.4em;
}

/* Post */

div.post-content>div.highlight {
    margin: 50px auto;
}

.post-title.entry-hint-parent {
    margin-bottom: 10px;
}

.post-content {
    font-family: 'Monserat', sans-serif;
    font-weight: 300;
    font-size: 1.1em;
    letter-spacing: 0.02em;
    word-spacing: 0.1em;
    line-height: 1.4em;
}

header.post-header {
    margin-bottom: 80px
}

div.post-meta {
    font-size: 1.2em;
}

.post-tags {
    margin-top: 10px;
}

div.breadcrumbs>a {
    font-size: 1.8em;
    margin-bottom: 20px
}

ol>li>p, ::marker {
    font-size: 0.7em;
}

/* Post link */
article.post-entry:first-of-type {
    margin-top: 70px;
}

div.entry-content {
    font-size: 0.9em;
}

footer.entry-footer {
    font-size: 1.00em;
}

header.entry-header>h2 {
    font-size: 1.5em
}

/* Navbar */

div.logo > a {
    font-size: 2.5em;
}

nav.nav {
    margin-bottom: 70px
}

ul#menu>li>a {
    font-size: 1.4em;
    font-weight: 300;
}

div.social-icons {
    margin-bottom: 0px;
    margin-top: 50px;
}

footer.post-footer {
    display: flex;
    justify-content: center;
    align-items: start;
}

div.post-footer {
    display: flex;
    justify-content: center;
    align-items: start;
}

/* Highlight */
.post-content pre code {
    color: #93A1A1;
    /* background: #002B36 !important; */
    font-family: 'Fira Mono', sans-serif;
    font-weight: 300;
    font-size: 0.73em;

    letter-spacing: 0.06em;
    word-spacing: -0.1em;
    line-height: 1.5em;
}

/* Mobile */

/* XS devices (normal phones, 300px and up) */
@media only screen and (min-width: 300px) {
    main.main {
        width: 100% !important;
        font-family: 'Monserat', sans-serif;
        font-weight: 400;
        font-size: 0.8em;
        letter-spacing: 0.008em;
        word-spacing: 0.1em;
        line-height: 1.4em;
    }

    nav.nav {
        padding-top: 10px;
        padding-left: 10px;
        margin-bottom: 10px;
    }

    article.post-entry:first-of-type {
        margin-top: 20px;
    }

    .post-title.entry-hint-parent {
        margin-bottom: 40px;
    }
}
/* S devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
    main.main {
        width: 100% !important;
        font-family: 'Monserat', sans-serif;
        font-weight: 400;
        font-size: 1.2em;
        letter-spacing: 0.008em;
        word-spacing: 0.1em;
        line-height: 1.4em;
        padding-left: 40px;
        padding-right: 40px;
    }

    nav.nav {
        padding-top: 40px;
        padding-left: 20px;
        padding-right: 20px;
        margin-bottom: 10px;
    }

    article.post-entry:first-of-type {
        margin-top: 70px;
    }

    .post-title.entry-hint-parent {
        margin-bottom: 30px;
    }
}
/* M devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
    main.main {
        position: relative;
        min-height: calc(100vh - var(--header-height) - var(--footer-height));
        max-width: calc(var(--main-width) + var(--gap) * 15);
        margin: auto;
        padding: var(--gap);
        padding-bottom: 0px;
        font-family: 'Monserat', sans-serif;
        font-weight: 400;
        font-size: 1.20em;
        letter-spacing: 0.008em;
        word-spacing: 0.1em;
        line-height: 1.4em;
    }

    nav.nav {
        margin-bottom: 70px
    }

    article.post-entry:first-of-type {
        margin-top: 70px;
    }

    .post-title.entry-hint-parent {
        margin-bottom: 10px;
    }
}

/* L devices (laptops and desctops, 992px and up) */
@media only screen and (min-width: 992px) {
    main.main {
        position: relative;
        min-height: calc(100vh - var(--header-height) - var(--footer-height));
        max-width: calc(var(--main-width) + var(--gap) * 15);
        margin: auto;
        padding: var(--gap);
        padding-bottom: 0px;
        font-family: 'Monserat', sans-serif;
        font-weight: 400;
        font-size: 1.20em;
        letter-spacing: 0.008em;
        word-spacing: 0.1em;
        line-height: 1.4em;
    }

    nav.nav {
        margin-bottom: 70px
    }

    article.post-entry:first-of-type {
        margin-top: 70px;
    }

    .post-title.entry-hint-parent {
        margin-bottom: 10px;
    }
}

/* XL devices (large laptops and desctops, 1200px and up) */
@media only screen and (min-width: 1200px) {
    main.main {
        position: relative;
        min-height: calc(100vh - var(--header-height) - var(--footer-height));
        max-width: calc(var(--main-width) + var(--gap) * 15);
        margin: auto;
        padding: var(--gap);
        padding-bottom: 0px;
        font-family: 'Monserat', sans-serif;
        font-weight: 400;
        font-size: 1.20em;
        letter-spacing: 0.008em;
        word-spacing: 0.1em;
        line-height: 1.4em;
    }

    nav.nav {
        margin-bottom: 70px
    }

    article.post-entry:first-of-type {
        margin-top: 70px;
    }

    .post-title.entry-hint-parent {
        margin-bottom: 10px;
    }
}

